# pypole

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  ci.yml  python-publish.yml
docs/: api.md  index.md
notebooks/: Untitled.ipynb  tutorial.ipynb
pypole/: __init__.py  __main__.py  compute.py  convert.py  dipole.py  fit.py  maps.py  plotting.py
tests/: conftest.py  test_compute.py  test_convert.py  test_dipole.py  test_fit.py  test_maps.py  test_plotting.py  test_properties.py
tests/test_example/: test_hello.py
