[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypole"
version = "0.1.1"
description = "Tools for simulating and fitting magnetic field maps from magnetic dipoles"
readme = "README.md"
authors = [{name = "Michael Volk", email = "michaelvolk1979@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "rich>=10.14.0",
  "numpy>=1.23.4",
  "scipy>=1.9.3",
  "numba>=0.56.4",
  "tqdm>=4.64.1",
  "matplotlib>=3.6.2",
  "loguru>=0.7.0",
]

[project.scripts]
pypole = "pypole.__main__:app"

[dependency-groups]
dev = [
  "pytest>=6.2.5",
  "pytest-cov>=3.0.0",
  "coverage>=6.1.2",
  "coverage-badge>=1.1.0",
  "hypothesis>=6.0.0",
  "ruff>=0.6.0",
  "ty>=0.0.1a1",
  "jupyterlab>=3.5.0",
  "pre-commit>=2.20.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "S",        # flake8-bandit
]
ignore = [
  "S101",   # assert used in tests
  "E501",   # line too long (docstrings in scientific code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"pypole/__init__.py" = ["E402"]
"pypole/compute.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.pytest.ini_options]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".hypothesis"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
